# app/Http/Controllers/AuthController.php
@@ -15,9 +15,9 @@ class AuthController extends Controller
      *      path="/api/user-auth",
      *      operationId="userAuth",
      *      tags={"Auth"},
-     *      summary="Get user auth info",
+     *      summary="Get User Auth Info",
      *      description="Return user auth info",
-     *      @OA\Response(response=200, description="successfully get user info", @OA\JsonContent()),
+     *      @OA\Response(response=200, description="Successfully get user info", @OA\JsonContent()),
      *      @OA\Response(response=400, description="Bad request", @OA\JsonContent()),
      *      @OA\Response(response=401, description="Unauthenticated", @OA\JsonContent()),
      *      security={{"passport-laravel": {}}},
@@ -42,9 +42,9 @@ class AuthController extends Controller
      *      path="/api/user-logout",
      *      operationId="userLogout",
      *      tags={"Auth"},
-     *      summary="Logout user auth",
+     *      summary="Logout User Auth",
      *      description="Return logout user auth",
-     *      @OA\Response(response=200, description="successfully logout", @OA\JsonContent()),
+     *      @OA\Response(response=200, description="Successfully logout", @OA\JsonContent()),
      *      @OA\Response(response=400, description="Bad request", @OA\JsonContent()),
      *      @OA\Response(response=401, description="Unauthenticated", @OA\JsonContent()),
      *      security={{"passport-laravel": {}}},
